--- a/widgets/htm/footer.htm
+++ b/widgets/htm/footer.htm
@@ -1,6 +1,6 @@
 <div style="margin-top: 30px; margin-left: 20px; font-weight: 300;">
 <hr />
 <p>Copyright &copy; Itay Asayag, MediQ, 2016. All rights reserved.</p>
-<center><div class="mute">Version TST1.0</div></center>
+<center><div class="mute">Version 0.9.1</div></center>
 </p>
 </div>
